# CS162-project

./: .gitignore  CMakeLists.txt  Makefile  ProjectUI  README.md  main.cpp  quickRun.sh  run.sh
.history/Function/: StaffFunc_20230504122030.cpp  StaffFunc_20230504122108.cpp  StaffFunc_20230504122111.cpp
.history/Header/: score_20230505140302.h  score_20230505140506.h
CS162-project/Header/: StaffFunc.h
Data/: account-locked.txt  account-student.txt
Data/Login/: account-staff.txt  account-student.txt  tmp.txt
Data/SchoolYear/2011-2012/Classes/: 22TT1.txt
Data/SchoolYear/2011-2012/Spring/: Semester_Info.txt
Data/SchoolYear/2023-2024/: Semester_Info.txt
Data/Student/: 12121212121.txt  21000001.txt  21000002.txt  21000003.txt  21125001.txt  21125002.txt  213123213.txt  2212.txt  22124555.txt  22125002.txt  22125003.txt  22125004.txt  22125005.txt  22125006.txt  22125008.txt  22125009.txt  22125010.txt  22125011.txt  22125012.txt  22125013.txt  22125014.txt  22125015.txt  22125016.txt  22125017.txt  22125018.txt  22125019.txt  22125020.txt  22125022.txt  22125024.txt  22125025.txt  22125026.txt  22125027.txt  22125028.txt  22125029.txt  22125030.txt  22125031.txt  22125032.txt  22125033.txt  22125035.txt  22125036.txt  (+17 more)
Function/: CMakeLists.txt  FileFolderDialog.cpp  Score.cpp  SemesterCourse.cpp  StaffFunc.cpp  StudentFunc.cpp  login.cpp  main.cpp  schoolYear.cpp  tempCodeRunnerFile.cpp  view.cpp
Function/Data/Login/: tmp.txt
Header/: CMakeLists.txt  CourseStruct.h  ScoreStruct.h  SemesterCourse.h  SemesterStruct.h  StaffFunc.h  StudentFunc.h  StudentLogin.h  StudentStruct.h  login.h  schoolYear.h  score.h  view.h
UI/: Button.cpp  Button.hpp  CMakeLists.txt  InputBar.cpp  InputBar.hpp  LoginUI.cpp  LoginUI.hpp  StaffUI.cpp  StaffUI.hpp  StaffUI_Class.cpp  StaffUI_Class.hpp  StaffUI_Course.cpp  StaffUI_Course.hpp  StaffUI_Semester.cpp  StaffUI_Semester.hpp  StudentUI.cpp  StudentUI.hpp  StudentUI_Semester.cpp  StudentUI_Semester.hpp  app.cpp  app.hpp  loginUI.cpp
(+70 files in other folders)
